@@ -29,4 +29,7 @@ class Sys::Process {
   native static method WIFSTOPPED : int ($wstatus : int);
   native static method WSTOPSIG : int ($wstatus : int);
   native static method WIFCONTINUED : int ($wstatus : int);
+
+  native static method usleep : int ($usec : int);
+
 }
