@@ -315,4 +315,22 @@ class TestCase::Sys::Process {
     
     return 1;
   }
+
+  static method usleep : int () {
+    
+    my $start = Time->time;
+    
+    my $status = Sys::Process->usleep(1_100_000);
+    
+    unless ($status  == 0) {
+      return 0;
+    }
+    
+    unless (Time->time - $start >= 1) {
+      return 0;
+    }
+    
+    return 1;
+  }
+
 }
